fix: remove text-wrap incompatibility on mozilla

--- a/frontend/modal_contents/tournament_menu/styles/tournament_menu.css
+++ b/frontend/modal_contents/tournament_menu/styles/tournament_menu.css
@@ -175,7 +175,7 @@
 
 	/* padding: 10%; */
 	/* text-align: center; */
-	text-wrap: nowrap;
+	/* text-wrap: nowrap; */
 	/* text-justify: auto */
 	box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 	border-radius: 8px;
